fix spacing issue and add a bit more flair

--- a/content/assets/stylesheets/includes/blogpost.scss
+++ b/content/assets/stylesheets/includes/blogpost.scss
@@ -70,11 +70,8 @@
     display: flex;
     > a {
       flex-grow: 1;
-
-      > h3 {
-        margin-bottom: 0;
-        display: inline-block;
-      }
+      margin-bottom: 0;
+      display: inline-block;
     }
   }
   > .blogpreview-extra {
